Fixed accumulation calculation when negative observations are present